<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InterestingsActivity">

    <CheckBox
        android:id="@+id/checkWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="40dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/WebCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintStart_toEndOf="@+id/checkHtml"
        app:layout_constraintTop_toBottomOf="@+id/checkJS" />

    <CheckBox
        android:id="@+id/checkJS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="218dp"
        android:layout_marginTop="40dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/JSCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintStart_toEndOf="@+id/checkCsh"
        app:layout_constraintTop_toBottomOf="@+id/checkJava" />

    <CheckBox
        android:id="@+id/checkJava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="211dp"
        android:layout_marginTop="40dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/JavaCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintStart_toEndOf="@+id/checkCpp"
        app:layout_constraintTop_toBottomOf="@+id/checkPython" />

    <CheckBox
        android:id="@+id/checkPython"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="40dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/PythonCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintStart_toEndOf="@+id/checkCSS"
        app:layout_constraintTop_toBottomOf="@+id/checkKotlin" />

    <CheckBox
        android:id="@+id/checkKotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="187dp"
        android:layout_marginTop="50dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/KotlinCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintStart_toEndOf="@+id/checkAndroid"
        app:layout_constraintTop_toBottomOf="@+id/InterestingsText" />

    <CheckBox
        android:id="@+id/checkHtml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="318dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/HtmlCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCsh" />

    <CheckBox
        android:id="@+id/checkCsh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="338dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/CshCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCpp" />

    <CheckBox
        android:id="@+id/checkCpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="331dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/CppCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCSS" />

    <CheckBox
        android:id="@+id/checkCSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="330dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/CssCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAndroid" />

    <TextView
        android:id="@+id/InterestingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/InterestingsCatText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="307dp"
        android:buttonTint="@color/buttonsbackground"
        android:text="@string/AndroidCheckBoxText"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InterestingsText" />

    <Button
        android:id="@+id/nextDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/buttonsbackground"
        android:text="@string/NextDisplayText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>