<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="167dp"
        android:autofillHints="@string/NamePromptText"
        android:backgroundTint="@color/buttonsbackground"
        android:ems="25"
        android:hint="@string/PasswordPromptText"
        android:inputType="textPersonName"
        android:textColorHint="@color/buttonsbackground"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputEm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:autofillHints="@string/NamePromptText"
        android:backgroundTint="@color/buttonsbackground"
        android:ems="25"
        android:hint="@string/InputEmailPrompt"
        android:inputType="textPersonName"
        android:textColorHint="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginLabel" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="415dp"
        android:layout_height="49dp"
        android:layout_marginTop="502dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/buttonsbackground"
        android:text="@string/SignInButtonText"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RegistrationPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="125dp"
        android:text="@string/RegistrationPromptText"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <Button
        android:id="@+id/RegistrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="54dp"
        android:backgroundTint="@color/buttonsbackground"
        android:onClick="changeToRegistrationActivity"
        android:text="@string/RegistrationButtonText"
        app:iconTint="@color/buttonsbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationPrompt"
        app:rippleColor="@color/buttonsbackground" />

    <TextView
        android:id="@+id/LoginLabel"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="75dp"
        android:text="@string/LoginText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/buttonsbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>